# mushroom

./: .gitignore  Cargo.toml
assets/css/: main.css
migrations/2023-03-13-175728_create_mushrooms/: up.sql
migrations/2023-03-13-180932_create_mushroom_notes/: down.sql  up.sql
migrations/2023-03-13-210933_create_species/: down.sql  up.sql
migrations/2023-03-14-173902_create_strains/: down.sql  up.sql
migrations/2023-03-14-213841_create_mushrooms/: down.sql  up.sql
migrations/2023-03-14-214003_create_notes/: up.sql
migrations/2023-03-14-214053_create_progress/: down.sql  up.sql
src/: db.rs  http.rs  main.rs  models.rs
src/db/: models.rs  schema.rs
src/db/models/: species.rs
src/http/: dashboard.rs  handlers.rs  notes.rs  species.rs
src/http/handlers/: notes.rs
src/http/handlers/notes/: index_html.rs  index_json.rs  show_html.rs  show_json.rs
src/models/: mushroom.rs  note.rs  strain.rs
templates/: dashboard.html  layout.html
templates/notes/: form.html  index.html  show.html
templates/species/: index.html  show.html
