[package]
name = "mushroom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
anyhow = "1.0.69"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["sqlite", "extras", "chrono", "r2d2"] }
diesel_migrations = { version = "=2.0.0", features = ["sqlite"] }
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
tera = "1.18.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
